--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,17 @@
         {
             "name": "David Craig",
             "email": "david@silverstripe.com"
+        },
+        {
+            "name": "Ian Herbert",
+            "email": "ian@silverstripe.com"
         }
     ],
     "require": {
         "php": ">=5.3.2",
         "silverstripe/framework": "~3.1",
-        "silverstripe/cms": "~3.1"
+        "silverstripe/cms": "~3.1",
+        "undefinedoffset/sortablegridfield": "0.4.3"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7"
