--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
   "browserify-shim": {
     "node_modules/jquery/dist/jquery.js": "$",
     "node_modules/chart.js/Chart.js": "Chart"
+  },
+  "dependencies": {
+    "tinycolor2": "^1.1.2"
   }
 }
