--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     {
       "name": "Ian Herbert",
       "email": "ian@silverstripe.com"
+    },
+    {
+      "name": "Jared Lee",
+      "email": "jared@silverstripe.com"
     }
   ],
   "license": "MIT",
