--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "mocha",
     "coverage": "istanbul cover --report html _mocha --",
     "build:js": "browserify static/js/src/main.js > static/js/dist/main.js",
-    "build:css": "stylus --compress < static/styl/main.styl > static/css/main.css",
-    "build": "npm run build:js && npm run build:css"
+    "build:css": "stylus --compress static/styl/main.styl --out static/css/main.css",
+    "build": "npm run build:js && npm run build:css",
+    "watch:js": "watchify static/js/src/main.js -o static/js/dist/main.js",
+    "watch:css": "stylus --watch static/styl/main.styl --compress static/styl/main.styl --out static/css/main.css"
   },
   "repository": {
     "type": "git",
@@ -47,7 +49,8 @@
     "jquery": "^2.1.4",
     "mocha": "^2.2.5",
     "stylus": "^0.51.1",
-    "tinycolor2": "^1.1.2"
+    "tinycolor2": "^1.1.2",
+    "watchify": "^3.2.2"
   },
   "browserify": {
     "transform": [
