--- a/.editorconfig
+++ b/.editorconfig
@@ -2,6 +2,8 @@
 # please see the EditorConfig documentation:
 # http://editorconfig.org
 
+root = true
+
 [*]
 charset = utf-8
 end_of_line = lf
@@ -9,9 +11,10 @@ indent_size = 4
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
+max_line_length = 120
 
-[{*.yml,package.json}]
+[*.{js,json,yml}]
 indent_size = 2
 
-# The indent size used in the package.json file cannot be changed:
-# https://github.com/npm/npm/pull/3180#issuecomment-16336516
+[*.md]
+trim_trailing_whitespace = false
