--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "undefinedoffset/sortablegridfield": "0.4.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "~3.7"
+        "phpunit/phpunit": "~3.7",
+        "squizlabs/php_codesniffer": "^3.0"
     }
 }
