Upgrade chart.js to v2.5

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "David Craig",
-            "email": "david@silverstripe.com"
+            "email": "david@davidcraig.co.nz"
         },
         {
             "name": "Ian Herbert",
