--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "php": ">=5.6",
         "silverstripe/framework": "~3.2",
         "silverstripe/cms": "~3.2",
-        "undefinedoffset/sortablegridfield": "~0.6"
+        "undefinedoffset/sortablegridfield": "~0.6",
+        "burnbright/silverstripe-importexport": "^0.3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7",
