--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,9 @@
         "php": ">=5.6",
         "silverstripe/framework": "~3.2",
         "silverstripe/cms": "~3.2",
-        "undefinedoffset/sortablegridfield": "~0.6",
-        "burnbright/silverstripe-importexport": "^0.3.1"
+        "undefinedoffset/sortablegridfield": "^0.6.9",
+        "burnbright/silverstripe-importexport": "^0.3.1",
+        "tractorcow/silverstripe-colorpicker": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7",
