--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,41 @@
 {
     "name": "flashbackzoo/silverstripe-charts",
-    "type": "silverstripe-module",
+    "type": "silverstripe-vendormodule",
     "description": "Display your data using Chart.js",
+    "homepage": "https://github.com/flashbackzoo/silverstripe-charts",
+    "support": {
+      "issues": "https://github.com/flashbackzoo/silverstripe-charts/issues"
+    },
     "license": "MIT",
     "keywords": ["SilverStripe", "Chart.js", "Graph"],
     "authors": [
         {
             "name": "David Craig",
             "email": "david@davidcraig.co.nz"
-        },
-        {
-            "name": "Ian Herbert",
-            "email": "ian@silverstripe.com"
-        },
-        {
-            "name": "Jared Lee",
-            "email": "jared@silverstripe.com"
         }
     ],
+    "repositories": [
+      {
+          "type": "path",
+          "url": "/Users/david/code/fork/silverstripe-importexport"
+      }
+    ],
     "require": {
-        "php": ">=5.6",
-        "silverstripe/framework": "~3.2",
-        "silverstripe/cms": "~3.2",
-        "undefinedoffset/sortablegridfield": "^0.6.9",
-        "burnbright/silverstripe-importexport": "^0.3.1",
-        "tractorcow/silverstripe-colorpicker": "^3.0"
+      "silverstripe/vendor-plugin": "^1.0",
+      "silverstripe/cms": "^4.0",
+      "tractorcow/silverstripe-colorpicker": "^4.0",
+      "symbiote/silverstripe-gridfieldextensions": "^3.0",
+      "burnbright/silverstripe-importexport": "@dev"
     },
-    "require-dev": {
-        "phpunit/phpunit": "~3.7",
-        "squizlabs/php_codesniffer": "^3.0"
+    "autoload": {
+      "psr-4": {
+        "flashbackzoo\\SilverStripeCharts\\": "src/"
+      }
+    },
+    "extra": {
+      "installer-name": "silverstripe-charts",
+      "expose": [
+        "client"
+      ]
     }
 }
